* Fix issue where certain versions of Safari treat class names case-insensitively in Selector/$$ queries. (Andrew Dupont, kangax, Brice)

* Fix issue where Function#argumentNames returned incorrect results in IE when comments were intermixed with argument names. (Christophe Porteneuve, T.J. Crowder)

* Performance improvements in Function methods (Samuel Lebeau, kangax, jddalton, Tobie Langel).

*1.6.0.3* (September 29, 2008)

* Add support for the Chrome browser in jstest.rb. (Andrew Dupont)

* Workaround a JavaScript exception in Opera. (Thomas Fuchs)

* Improve NodeList detection for Safari's $A function. (Garrett Smith, jddalton)

* Use different tactic to sniff for Opera in order to avoid false positives in IE. (Tobie Langel, jddalton)

* Rename variable in Form.Element.Serializers.select. (jddalton)

* Coerce Opera's version string into a number whenever we need to sniff. (Sam Holman, jddalton)

* Ensure Object.isElement handles "falsy" values properly. (kangax)

* Fix exiting test task on INT signal. (Samuel Lebeau)

* Fix unit test freeze in IE. (Tobie Langel)

* Ensure Hash does not return keys from the prototype chain (e.g., constructor, valueOf, toString). (kangax)

* Fix toString/valueOf sharing same method reference via closure in Class#addMethods. Use plain property assignment, since Object.extend fails to enumerate over toString/valueOf. (kangax)

* Stop Form.Element.disable from stealing focus. (jddalton)

* Ensure Element.hide and Element.show return an element, even if you pass an element ID. (Andrew Dupont)

* Fix an issue where Element#getStyle('height') returns null if the height is set to "auto." (kangax, jddalton)

* Add unit tests for Element#descendantOf. (jddalton)

* Form#serializeElements should not serialize file inputs. (kangax, Lonesome Boy)

* Fix an issue with calling Event.pointer before the DOM is loaded. (kangax, jddalton) [#4 state:resolved]

* Element#down on an input element should not raise error. (humeniuc, kangax)
